added exception for email already exist

--- a/translations/api_errors.uz.yaml
+++ b/translations/api_errors.uz.yaml
@@ -1,1 +1,2 @@
 invalid_credentials: "Sizning elektron pochtangiz yoki parolingiz noto'g'ri. Iltimos, yana bir bor urinib ko'ring."
+email_already_exist: "Taqdim etilgan elektron pochta allaqachon ishlatilmoqda"
