--- a/translations/api_errors.en.yaml
+++ b/translations/api_errors.en.yaml
@@ -1,1 +1,2 @@
 invalid_credentials: "Your email or password is incorrect. Please try again."
+email_already_exist: "The email provided is already in use"
