--- a/translations/api_errors.en.yaml
+++ b/translations/api_errors.en.yaml
@@ -1,3 +1,4 @@
 invalid_credentials: "Your email or password is incorrect. Please try again."
 email_already_exist: "The email provided is already in use"
 category_not_found: "Category not found"
+collection_not_found: "Collection not found"
