--- a/translations/api_errors.uz.yaml
+++ b/translations/api_errors.uz.yaml
@@ -1,3 +1,4 @@
 invalid_credentials: "Sizning elektron pochtangiz yoki parolingiz noto'g'ri. Iltimos, yana bir bor urinib ko'ring."
 email_already_exist: "Taqdim etilgan elektron pochta allaqachon ishlatilmoqda"
 category_not_found: "Turkum topilmadi"
+collection_not_found: "Toʻplam topilmadi"
