--- a/translations/api_success.uz.yaml
+++ b/translations/api_success.uz.yaml
@@ -1,2 +1,3 @@
 collection_create_response: "Toʻplam muvaffaqiyatli yaratildi"
 collection_delete_response: "Toʻplam muvaffaqiyatli oʻchirildi"
+collection_edit_response: "Toʻplam muvaffaqiyatli oʻzgartirildi"
