added delete item api

--- a/translations/api_success.en.yaml
+++ b/translations/api_success.en.yaml
@@ -2,3 +2,4 @@ collection_create_response: "Collection successfully created"
 collection_delete_response: "Collection successfully deleted"
 collection_edit_response: "Collection successfully changed"
 item_create_response: "Item successfully created"
+item_delete_response: "Item successfully deleted"
