--- a/translations/api_success.uz.yaml
+++ b/translations/api_success.uz.yaml
@@ -2,3 +2,4 @@ collection_create_response: "Toʻplam muvaffaqiyatli yaratildi"
 collection_delete_response: "Toʻplam muvaffaqiyatli oʻchirildi"
 collection_edit_response: "Toʻplam muvaffaqiyatli oʻzgartirildi"
 item_create_response: "Element muvaffaqiyatli yaratildi"
+item_delete_response: "Element muvaffaqiyatli oʻchirildi"
