added edit item api

--- a/translations/api_success.uz.yaml
+++ b/translations/api_success.uz.yaml
@@ -3,3 +3,4 @@ collection_delete_response: "Toʻplam muvaffaqiyatli oʻchirildi"
 collection_edit_response: "Toʻplam muvaffaqiyatli oʻzgartirildi"
 item_create_response: "Element muvaffaqiyatli yaratildi"
 item_delete_response: "Element muvaffaqiyatli oʻchirildi"
+item_edit_response: "Element muvaffaqiyatli tahrirlandi"
