--- a/translations/api_success.en.yaml
+++ b/translations/api_success.en.yaml
@@ -3,3 +3,4 @@ collection_delete_response: "Collection successfully deleted"
 collection_edit_response: "Collection successfully changed"
 item_create_response: "Item successfully created"
 item_delete_response: "Item successfully deleted"
+item_edit_response: "Item successfully edited"
