--- a/translations/api_errors.uz.yaml
+++ b/translations/api_errors.uz.yaml
@@ -2,3 +2,5 @@ invalid_credentials: "Sizning elektron pochtangiz yoki parolingiz noto'g'ri. Ilt
 email_already_exist: "Taqdim etilgan elektron pochta allaqachon ishlatilmoqda"
 category_not_found: "Turkum topilmadi"
 collection_not_found: "Toʻplam topilmadi"
+user_not_found: "Foydalanuvchi topilmadi"
+item_not_found: "Element topilmadi"
