--- a/translations/api_success.en.yaml
+++ b/translations/api_success.en.yaml
@@ -4,3 +4,6 @@ collection_edit_response: "Collection successfully changed"
 item_create_response: "Item successfully created"
 item_delete_response: "Item successfully deleted"
 item_edit_response: "Item successfully edited"
+like_created: "Like added"
+like_removed: "Like removed"
+
