--- a/translations/api_success.uz.yaml
+++ b/translations/api_success.uz.yaml
@@ -4,3 +4,5 @@ collection_edit_response: "Toʻplam muvaffaqiyatli oʻzgartirildi"
 item_create_response: "Element muvaffaqiyatli yaratildi"
 item_delete_response: "Element muvaffaqiyatli oʻchirildi"
 item_edit_response: "Element muvaffaqiyatli tahrirlandi"
+like_created: "Like qo'shilgan"
+like_removed: "Like o'chirildi"
