added admin controller

--- a/translations/api_errors.en.yaml
+++ b/translations/api_errors.en.yaml
@@ -4,3 +4,4 @@ category_not_found: "Category not found"
 collection_not_found: "Collection not found"
 user_not_found: "User not found"
 item_not_found: "Item not found"
+user_blocked: "Your account is blocked. Contact with administrator."
