--- a/translations/api_errors.uz.yaml
+++ b/translations/api_errors.uz.yaml
@@ -4,3 +4,4 @@ category_not_found: "Turkum topilmadi"
 collection_not_found: "Toʻplam topilmadi"
 user_not_found: "Foydalanuvchi topilmadi"
 item_not_found: "Element topilmadi"
+user_blocked: "Hisobingiz bloklangan. Administrator bilan bog'laning."
