--- a/translations/api_success.uz.yaml
+++ b/translations/api_success.uz.yaml
@@ -6,3 +6,4 @@ item_delete_response: "Element muvaffaqiyatli oʻchirildi"
 item_edit_response: "Element muvaffaqiyatli tahrirlandi"
 like_created: "Like qo'shilgan"
 like_removed: "Like o'chirildi"
+user_blocked_response: "Bloklash muvaffaqiyatli bo'ldi"
