--- a/translations/api_success.uz.yaml
+++ b/translations/api_success.uz.yaml
@@ -7,3 +7,5 @@ item_edit_response: "Element muvaffaqiyatli tahrirlandi"
 like_created: "Like qo'shilgan"
 like_removed: "Like o'chirildi"
 user_blocked_response: "Bloklash muvaffaqiyatli bo'ldi"
+user_deleted_response: "Oʻchirish muvaffaqiyatli boʻldi"
+user_role_changed_response: "Rol o'zgarishi muvaffaqiyatli bo'ldi"
