added jira integration

--- a/translations/api_errors.en.yaml
+++ b/translations/api_errors.en.yaml
@@ -5,3 +5,4 @@ collection_not_found: "Collection not found"
 user_not_found: "User not found"
 item_not_found: "Item not found"
 user_blocked: "Your account is blocked. Contact with administrator."
+ticket_created_response: "Error while creating ticket, please try again later"
