--- a/translations/api_errors.pl.yaml
+++ b/translations/api_errors.pl.yaml
@@ -5,3 +5,4 @@ collection_not_found: "Kolekcja nie znaleziona"
 user_not_found: "Użytkownik nie znaleziony"
 item_not_found: "Przedmiot nie znaleziony"
 user_blocked: "Twoje konto jest zablokowane. Skontaktuj się z administratorem."
+ticket_created_response: "Błąd podczas tworzenia zgłoszenia. Spróbuj ponownie później"
