--- a/translations/api_errors.ru.yaml
+++ b/translations/api_errors.ru.yaml
@@ -5,3 +5,4 @@ collection_not_found: "Коллекция не найдена"
 user_not_found: "Пользователь не найден"
 item_not_found: "Предмет не найден"
 user_blocked: "Ваш аккаунт заблокирован. Свяжитесь с администратором."
+ticket_created_response: "Ошибка при создании заявки, повторите попытку чуть позже"
