--- a/translations/api_success.pl.yaml
+++ b/translations/api_success.pl.yaml
@@ -9,3 +9,4 @@ like_removed: "Polubienie usunięte"
 user_blocked_response: "Blokada została pomyślnie wykonana"
 user_deleted_response: "Usunięcie zostało pomyślnie wykonane"
 user_role_changed_response: "Zmiana roli została pomyślnie wykonana"
+ticket_created_response: "Bilet został pomyślnie utworzony"
