--- a/translations/api_success.ru.yaml
+++ b/translations/api_success.ru.yaml
@@ -9,3 +9,4 @@ like_removed: "Лайк удален"
 user_blocked_response: "Блокировка успешно выполнена"
 user_deleted_response: "Удаление успешно выполнено"
 user_role_changed_response: "Изменение роли успешно выполнено"
+ticket_created_response: "Заявка была успешно создана"
